Fixed paragraph spacing

--- a/frontend/src/app/modules/result/result.component.scss
+++ b/frontend/src/app/modules/result/result.component.scss
@@ -153,6 +153,7 @@
   .result_text {
     margin-top: 15px;
     padding: 0 20px;
+    white-space: pre-wrap;
     font-size: large;
   }
 
